--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Dictionary App</string>
+    <string name="app_name">English Tagalog Dictionary</string>
+
+
+    <string name="admob_id_home">ca-app-pub-7607380003153721/4076165492</string>
+    <string name="admob_id_interstitials">ca-app-pub-7607380003153721/5552898691</string>
+    <string name="language_b">Tagalog</string>
+    <string name="language_a">English</string>
+
+
+
     <string name="action_settings">Settings</string>
     <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</string>
     <string name="search_hint">Search The Dictionary</string>
     <string name="no_result_title">No Results Found</string>
     <string name="no_result_description">hmm, looks like I haven\'t come accross this word before. :(</string>
     <string name="type">Type</string>
-    <string name="admob_id_interstitials">ca-app-pub-7607380003153721/5107403495</string>
-    <string name="admob_id_home">ca-app-pub-7607380003153721/8200470699</string>
-
 </resources>
