Ver 1.0.1 Release + Interstitial fix

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
 
 
     <string name="admob_id_home">ca-app-pub-7607380003153721/1919617899</string>
-    <string name="admob_id_interstitials"></string>
+    <string name="admob_id_interstitials">ca-app-pub-7607380003153721/7700296292</string>
     <string name="language_b">Arabic</string>
     <string name="language_code_b">ara</string>
 
